@@ -1,2 +1,2 @@
-pubmed prozac
-Items 1 - 20 of \d+
+pubmed fluoxetine
+Results: 1 to 20 of \d+
